--- a/src/Components/BlogDetails/BlogDetails.css
+++ b/src/Components/BlogDetails/BlogDetails.css
@@ -1,10 +1,8 @@
 .header-gradient {
   background: rgb(27, 67, 136);
-  background: linear-gradient(
-    25deg,
-    rgba(27, 67, 136, 1) 0%,
-    rgba(30, 144, 194, 1) 100%
-  );
+  background: linear-gradient(25deg,
+      rgba(27, 67, 136, 1) 0%,
+      rgba(30, 144, 194, 1) 100%);
   height: 30vh;
   width: 100%;
   position: absolute;
